--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.14",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "next": "14.1.4",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "query-string": "^9.0.0",
     "react": "^18",
@@ -29,6 +27,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
