--- a/package.json
+++ b/package.json
@@ -4,30 +4,43 @@
   "private": true,
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
+    "test": "jest --watch",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.14",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
+    "jest-mock-extended": "^3.0.7",
     "next": "14.1.4",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "test-jest": "^1.0.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.7",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
+    "@types/query-string": "^6.3.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^3.4.4",
+    "ts-jest": "^29.1.5",
     "typescript": "^5"
   }
 }
