--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.14",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "jest-mock-axios": "^4.7.3",
     "jest-mock-extended": "^3.0.7",
     "next": "14.1.4",
